# legal_agents

./: README.md  agents.py  pyproject.toml  requirements.txt
cases/: cases.md  warrant_habitability_laws.md
